--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2 class="heading">About<span> Me</span></h2>
 
         <div class="about-img">
-            <img src="./images/avatar.avif" alt="My Pic">
+            <img src="./images/AvatarMaker.png" alt="My Pic">
             <span class="circle-spin"></span>
         </div>
 
